--- a/scrolling-tabs.css
+++ b/scrolling-tabs.css
@@ -1,31 +1,26 @@
 /**
  * angular-bootstrap-scrolling-tabs
- * @version v0.1.1
+ * @version v0.2.0
  * @link https://github.com/mikejacobson/angular-bootstrap-scrolling-tabs
  * @author Mike Jacobson <michaeljjacobson1@gmail.com>
  * @license MIT License, http://www.opensource.org/licenses/MIT
  */
-/* line 13, scrolling-tabs.scss */
 .scrtabs-tab-container * {
   box-sizing: border-box;
 }
 
-/* line 17, scrolling-tabs.scss */
 .scrtabs-tab-container {
   height: 42px;
 }
 
-/* line 21, scrolling-tabs.scss */
 .scrtabs-tab-container .tab-content {
   clear: left;
 }
 
-/* line 25, scrolling-tabs.scss */
 .scrtabs-tab-wrapper-container.force-height {
   height: 42px;
 }
 
-/* line 29, scrolling-tabs.scss */
 .scrtabs-tabs-fixed-container {
   float: left;
   height: 42px;
@@ -33,17 +28,14 @@
   width: 100%;
 }
 
-/* line 36, scrolling-tabs.scss */
 .scrtabs-tabs-movable-container {
   position: relative;
 }
 
-/* line 40, scrolling-tabs.scss */
 .scrtabs-tabs-movable-container .tab-content {
   display: none;
 }
 
-/* line 44, scrolling-tabs.scss */
 .scrtabs-tab-scroll-arrow {
   border: 1px solid #dddddd;
   border-top: none;
@@ -58,22 +50,24 @@
   padding-top: 13px;
   width: 20px;
 }
-/* line 57, scrolling-tabs.scss */
+
 .scrtabs-tab-scroll-arrow:hover {
   background-color: #eeeeee;
 }
 
-/* line 62, scrolling-tabs.scss */
+.scrtabs-tab-scroll-arrow--is-on-edge {
+  pointer-events: none;
+  opacity: .5;
+}
+
 .scrtabs-tabs-fixed-container ul.nav-tabs > li {
   white-space: nowrap;
 }
 
-/* line 66, scrolling-tabs.scss */
 .scrtabs-tab-content-outside-movable-container {
   clear: left;
 }
 
-/* line 70, scrolling-tabs.scss */
 .scrtabs-tab-content-outside-movable-container .nav-tabs {
   display: none;
 }
