--- a/scrolling-tabs.scss
+++ b/scrolling-tabs.scss
@@ -1,6 +1,6 @@
 /**
  * angular-bootstrap-scrolling-tabs
- * @version v0.1.1
+ * @version v0.2.0
  * @link https://github.com/mikejacobson/angular-bootstrap-scrolling-tabs
  * @author Mike Jacobson <michaeljjacobson1@gmail.com>
  * @license MIT License, http://www.opensource.org/licenses/MIT
@@ -57,6 +57,11 @@ $background-color-bootstrap-gray-hover: rgb(238, 238, 238);
   &:hover {
     background-color: $background-color-bootstrap-gray-hover;
   }
+}
+
+.scrtabs-tab-scroll-arrow--is-on-edge {
+  pointer-events: none;
+  opacity: .5;
 }
 
 .scrtabs-tabs-fixed-container ul.nav-tabs > li {
