--- a/scrolling-tabs.scss
+++ b/scrolling-tabs.scss
@@ -1,6 +1,6 @@
 /**
  * angular-bootstrap-scrolling-tabs
- * @version v0.3.0
+ * @version v0.3.1
  * @link https://github.com/mikejacobson/angular-bootstrap-scrolling-tabs
  * @author Mike Jacobson <michaeljjacobson1@gmail.com>
  * @license MIT License, http://www.opensource.org/licenses/MIT
@@ -35,6 +35,7 @@ $background-color-bootstrap-gray-hover: rgb(238, 238, 238);
 
 .scrtabs-tabs-movable-container {
   position: relative;
+  height: inherit;
 }
 
 .scrtabs-tabs-movable-container .tab-content {
